--- a/src/assets/i18n/tr.json
+++ b/src/assets/i18n/tr.json
@@ -17,13 +17,13 @@
   "uncompleteOrderMessage": "Sipariş Tamamlanmadı",
   "stockUpdatedMessage": "Stok Güncellendi",
   "allDoneOrderMessage": "Tüm siparişler alındı.",
-  "clearcart":"Sepet boşaltıldı.",
+  "clearcart":"Tüm ürünler sepettten kaldırıldı",
   "unallDoneOrderMessage": "Sepet Boşaltılamadı. ",
   "pleaseWait": "Lütfen Bekleyiniz...",
   "Electronics": "Elektronik",
   "Fitness": "Spor",
   "Accessories": "Aksesuarlar",
-  "Clothing": "Giysi",
+  "Clothing": "Giyim",
   "InStock": "Stokta var",
   "OutofStock": "Stokta yok",
   "LowStock": "Tükenmek üzere",
