add becoma a seller

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -65,6 +65,8 @@
     "rememberme":"Remember me",
     "dontforget":"Forgot Password?",
     "haveaccount":"Don't have an account?",
+    "haveseller": "Would you like to become a seller?",
+    "createseller": "Become a Seller!",
     "createnow":"Create now!",
     "messageDetailsuccess":"Login process successful...",
     "messageDetailerror":"Failed to log in. Username or password is wrong.",
@@ -107,6 +109,53 @@
     "confirmSmall": "* Password field cannot be left blank",
     "confirmSmallSecond": "* Passwords you entered do not match",
     "buttonLabel": "Sign up",
+    "terms":"I agree with all statements regarding the terms of service",
+    "haveaccount":"Have already an account?",
+    "loginhere":"Login here!",
+    "codeLabel":"Verify Code",
+    "messageDetailsuccess":"You can verify your account with the verification code sent to your e-mail address.",
+    "messageDetailerror":"This email address is already in use. Please choose another email address.",
+    "messageDetailwarn":"Fill out the form information",
+    "messageDetailsuccessverify":"Registration completed successfully... You are directed to the login screen...",
+    "messageDetailerrorverify":"The code you entered could not be verified... Please try again"
+  },
+  "sellerForm": {
+    "header": "Become a Seller!",
+    "nameTooltip": "Enter your name",
+    "nameLabel": "Name",
+    "nameSmall": "* Name field cannot be left blank",
+    "surnameTooltip":"Enter your surname",
+    "surnameLabel":"Surname",
+    "surnameSmall":"* Surname field cannot be left blank",
+    "usernameTooltip": "Enter your username",
+    "usernameLabel": "Username",
+    "usernameSmall": "* Username field cannot be left blank",
+    "emailTooltip": "Enter your email",
+    "emailLabel": "Email",
+    "emailSmall": "* Email field cannot be left blank",
+    "phoneTooltip":"Enter phone number",
+    "phoneLabel":"Phone",
+    "phoneSmall":"Phone number field cannot be left blank",
+    "addressTooltip":"Enter your address",
+    "addressLabel":"Address",
+    "addressSmall":"* Address field cannot be left blank",
+    "bDateTooltip":"Enter your date of birth",
+    "bDateLabel":"Date of birth",
+    "bDateSmall":"* Date of Birth field cannot be left blank",
+    "genderTooltip":"Enter your gender",
+    "genderLabel":"Gender",
+    "genderSmall":"* Gender field cannot be left blank",
+    "passwordTooltip": "Enter your password",
+    "passwordLabel": "Password",
+    "passwordSmall": "* Password field cannot be left blank",
+    "passwordSmallLength":"* Password must consist of at least 8 characters",
+    "taxNumberSmallLength":"* Tax number must consist of 11 characters",
+    "confirmTooltip": "Enter your Password (Repeat)",
+    "confirmLabel": "Password (Repeat) ",
+    "confirmSmall": "* Password field cannot be left blank",
+    "confirmSmallSecond": "* Passwords you entered do not match",
+    "buttonLabel": "Become a Seller",
+    "codeButton": "Become a Seller",
     "terms":"I agree with all statements regarding the terms of service",
     "haveaccount":"Have already an account?",
     "loginhere":"Login here!",
