--- a/src/assets/i18n/tr.json
+++ b/src/assets/i18n/tr.json
@@ -63,6 +63,8 @@
     "rememberme": "Beni hatırla",
     "dontforget": "Parolanızı mı unuttunuz?",
     "haveaccount": "Hesabınız yok mu?",
+    "haveseller": "Satıcı olmak ister misiniz?",
+    "createseller": "Satıcı Ol!",
     "createnow": "Şimdi oluştur!",
     "messageDetailsuccess": "Giriş işlemi başarılı...",
     "messageDetailerror": "Giriş yapılamadı. Kullanıcı adı veya şifre hatalı.",
@@ -105,6 +107,53 @@
     "confirmSmall": "* Şifre  alanı boş bırakılamaz",
     "confirmSmallSecond": "* Girdiğiniz Şifreler eşleşmiyor",
     "buttonLabel": "Üye ol",
+    "terms": "Hizmet şartlarına ilişkin tüm beyanlara katılıyorum",
+    "haveaccount": "Zaten bir hesabınız var mı?",
+    "loginhere": "Giriş yapın!",
+    "codeLabel": "Doğrulama Kodu",
+    "messageDetailsuccess": "E-posta adresinize gönderilen doğrulama kodu ile hesabınızı doğrulayabilirsiniz",
+    "messageDetailerror": "Bu e-posta adresi zaten kullanılmaktadır. Lütfen başka bir e-posta adresi seçin.",
+    "messageDetailwarn": "Form bilgilerini doldurunuz",
+    "messageDetailsuccessverify": "Kayıt Başarılı bir şekilde tamamlandı...Giriş ekranına yönlendiriliyorsunuz...",
+    "messageDetailerrorverify": "Girdiğiniz kod doğrulanamadı... Lütfen tekrar deneyiniz"
+  },
+  "sellerForm": {
+    "header": "Satıcı ol!",
+    "nameTooltip": "Adınızı giriniz",
+    "nameLabel": "Ad",
+    "nameSmall": "* Ad alanı boş bırakılamaz",
+    "surnameTooltip": "Soyadınızı giriniz",
+    "surnameLabel": "Soyad",
+    "surnameSmall": "* Soyad alanı boş bırakılamaz",
+    "usernameTooltip": "Kullanıcı adınızı giriniz",
+    "usernameLabel": "Kullanıcı adı",
+    "usernameSmall": "* Kullanıcı adı alanı boş bırakılamaz",
+    "emailTooltip": "Emailinizi giriniz",
+    "emailLabel": "Email",
+    "emailSmall": "* email alanı boş bırakılamaz",
+    "phoneTooltip": "Telefon numarası giriniz",
+    "phoneLabel": "Telefon",
+    "phoneSmall": "*Telefon no alanı boş bırakılamaz",
+    "addressTooltip": "Adresinizi giriniz",
+    "addressLabel": "Adres",
+    "addressSmall": "* Adres alanı boş bırakılamaz",
+    "bDateTooltip": "Doğum tarihinizi giriniz",
+    "bDateLabel": "Doğum Tarihi",
+    "bDateSmall": "* Doğum Tarihi alanı boş bırakılamaz",
+    "genderTooltip": "Cinsiyetinizi giriniz",
+    "genderLabel": "Cinsiyet",
+    "genderSmall": "* Cinsiyet alanı boş bırakılamaz",
+    "passwordTooltip": "Şifrenizi giriniz",
+    "passwordLabel": "Şifre",
+    "passwordSmall": "* Şifre alanı boş bırakılamaz",
+    "passwordSmallLength":"* Şifre en 8 karakterden oluşmalıdır",
+    "taxNumberSmallLength":"* Vergi no 11 karakterden oluşmalıdır",
+    "confirmTooltip": "Şifre (Tekrar) giriniz",
+    "confirmLabel": "Şifre (Tekrar) ",
+    "confirmSmall": "* Şifre  alanı boş bırakılamaz",
+    "confirmSmallSecond": "* Girdiğiniz Şifreler eşleşmiyor",
+    "buttonLabel": "Satıcı ol",
+    "codeButton": "Satıcı ol",
     "terms": "Hizmet şartlarına ilişkin tüm beyanlara katılıyorum",
     "haveaccount": "Zaten bir hesabınız var mı?",
     "loginhere": "Giriş yapın!",
