reset password fixed

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -50,6 +50,8 @@
   "Female":"Female",
   "Another":"Another",
   "complateUserInfoMessage":"Complete your user information.",
+  "detailMessagesuccessRS":"Your password change has been completed successfully.",
+  "detailMessageerrorRS":"Your password change could not be completed.",
 
 
 
